--- a/frontend/src/components/Dashboard/DashboardNav/index.css
+++ b/frontend/src/components/Dashboard/DashboardNav/index.css
@@ -1,7 +1,8 @@
 .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px 24px 16px 0;
+    width: 215px;
+    /*height: 31px;*/
+    height: auto;
+    /*background: rgba(255, 255, 255, 0.2);*/
+    margin: 13px 18px 0 0;
     float: left;
 }
